# gemma.hs

./: .gitignore  README.md  gemma.cabal
app/: Main.hs  QuantizeToQ4.hs
examples/: BenchmarkKVCache.hs  CompareTokenizers.hs  DownloadGemma.hs  ShowConfigs.hs  TestChatTemplate.hs  TestGGUF.hs  TestGGUFSimple.hs  TestKVCacheBasic.hs  TestTokenizer.hs  TestTokenizerProto.hs  WGSLHelloWorld.hs
src/Gemma/: ChatTemplate.hs  GGUF.hs  HuggingFace.hs  KVCache.hs  Model.hs  SafeTensors.hs  Tokenizer.hs
src/Gemma/Layers/: Attention.hs  AttentionCached.hs  AttentionDSL.hs  AttentionFused.hs  AttentionGPU.hs  Convert.hs  ElementwiseDSL.hs  Embedding.hs  GELUDSL.hs  Linear.hs  LinearDSL.hs  LinearQ4.hs  LinearQ4DSL.hs  LinearQ4Fused.hs  MLP.hs  RMSNorm.hs  RMSNormDSL.hs  RoPE.hs  RoPEDSL.hs  Scale.hs  SoftmaxDSL.hs  TransformerBlock.hs  TransformerBlockGPU.hs
src/Gemma/Quantization/: Q4.hs
src/Gemma/Tokenizer/: BPE.hs  Decode.hs  Normalize.hs  Proto.hs
src/Gemma/Utils/: Half.hs
src/Graphics/WebGPU/Dawn/: KernelCache.hs
test/: GemmaSpec.hs
test/Gemma/: TestCache.hs
test/Gemma/Layers/: AttentionDSLSpec.hs  DequantQ4GGUFSpec.hs  ElementwiseDSLSpec.hs  GELUDSLSpec.hs  LinearDSLSpec.hs  LinearQ4DSLSpec.hs  LinearQ4FusedSpec.hs  LinearQ4Spec.hs  RMSNormDSLSpec.hs  RoPEDSLSpec.hs  SoftmaxDSLSpec.hs
test/Gemma/Quantization/: Q4Spec.hs
test/Gemma/Regression/: AttentionSpec.hs  CompareWithOfficialSpec.hs  CompareWithOfficialSpec_embedding.py  CompareWithOfficialSpec_layer0.py  CompareWithOfficialSpec_layer0_cached.py  EmbeddingSpec.hs  FP16Spec.hs  FP32InferenceSpec.hs  FP32InferenceSpec_singleToken.py  FP32Spec.hs  FirstTokenSpec.hs  FirstTokenSpec_lastToken.py  FirstTokenSpec_layer0.py  FirstTokenSpec_layer0_withcache.py  FirstTokenSpec_layerByLayer.py  FirstTokenSpec_pytorch.py  InferenceComparisonSpec_pytorch.py  InferenceSpec.hs  LastTokenSpec.hs  Layer0WithCacheSpec.hs  Layer0WithCacheSpec_internals.py  Layer0WithCacheSpec_rope.py  Layer0WithCacheSpec_rope_attention.py  MultiTokenPromptSpec.hs  MultiTokenPromptSpec_prompt17.json  MultiTokenPromptSpec_prompt17.py  MultiTokenSpec.hs  OfficialReference_prompt17.json  Q4InferenceSpec.hs  Q4InferenceSpec_failingToken.json  Q4InferenceSpec_failingToken.py  Q4InferenceSpec_fullPipeline.py  Q4InferenceSpec_layer0.py  Q4InferenceSpec_quantization.py  Q4InlinePytorchSpec.hs  Q4Spec.hs  q4_layer0_reference.json
test/golden-values/: attention_k.safetensors  attention_output.safetensors  attention_q.safetensors  attention_v.safetensors  embedding_output.safetensors  embedding_table.safetensors  embedding_token_ids.safetensors  gelu_input.safetensors  gelu_output.safetensors  gqa_k_expanded.safetensors  gqa_k_input.safetensors  gqa_v_expanded.safetensors  gqa_v_input.safetensors  linear_input.safetensors  linear_output.safetensors  linear_weight.safetensors  rmsnorm_input.safetensors  rmsnorm_output.safetensors  rmsnorm_weight.safetensors  rope_input_pos0.safetensors  rope_output_pos0.safetensors  rope_output_pos1.safetensors
