cabal-version:      3.0
name:               gemma
version:            0.1.0.0
synopsis:           Gemma 3 (1B) Inference Engine using WebGPU Dawn
description:
  Haskell implementation of Gemma 3 1B inference engine using Google's Dawn WebGPU.
  Features GPU-first architecture with all weights resident in GPU memory for maximum performance.
  Built using Test-Driven Development with PyTorch golden value verification.
license:            MIT
author:             Junji Hashimoto
maintainer:         junji.hashimoto@gmail.com
category:           AI, GPU, Machine Learning
build-type:         Simple

library
  exposed-modules:
    Gemma.SafeTensors
    Gemma.Model
    Gemma.KVCache
    Gemma.Layers.RMSNorm
    Gemma.Layers.RMSNormDSL
    Gemma.Layers.RoPEDSL
    Gemma.Layers.Linear
    Gemma.Layers.LinearDSL
    Gemma.Layers.LinearQ4
    Gemma.Layers.LinearQ4DSL
    Gemma.Layers.LinearQ4Fused
    Gemma.Layers.RoPE
    Gemma.Layers.Attention
    Gemma.Layers.AttentionCached
    Gemma.Layers.AttentionGPU
    Gemma.Layers.AttentionDSL
    Gemma.Layers.MLP
    Gemma.Layers.GELUDSL
    Gemma.Layers.ElementwiseDSL
    Gemma.Layers.SoftmaxDSL
    Gemma.Layers.Embedding
    Gemma.Layers.Scale
    Gemma.Layers.Convert
    Gemma.Layers.TransformerBlock
    Gemma.Layers.TransformerBlockGPU
    Gemma.Quantization.Q4
    Gemma.Tokenizer
    Gemma.Tokenizer.Proto
    Gemma.Tokenizer.Normalize
    Gemma.Tokenizer.BPE
    Gemma.Tokenizer.Decode
    Gemma.ChatTemplate
    Gemma.Utils.Half

  hs-source-dirs:   src
  default-language: Haskell2010
  ghc-options:      -Wall -O2

  build-depends:
    base >= 4.14 && < 5,
    webgpu-dawn,
    vector >= 0.12,
    bytestring >= 0.10,
    aeson >= 2.0,
    text >= 1.2,
    containers >= 0.6,
    transformers >= 0.5,
    mtl >= 2.2,
    half >= 0.3

test-suite gemma-test
  type:             exitcode-stdio-1.0
  main-is:          GemmaSpec.hs
  other-modules:
    Gemma.TestCache
    Gemma.Quantization.Q4Spec
    Gemma.Layers.LinearDSLSpec
    Gemma.Layers.AttentionDSLSpec
    Gemma.Layers.RMSNormDSLSpec
    Gemma.Layers.RoPEDSLSpec
    Gemma.Layers.GELUDSLSpec
    Gemma.Layers.ElementwiseDSLSpec
    Gemma.Layers.SoftmaxDSLSpec
    Gemma.Layers.LinearQ4Spec
    Gemma.Layers.LinearQ4DSLSpec
    Gemma.Layers.LinearQ4FusedSpec
    Gemma.Regression.FP32Spec
    Gemma.Regression.FP32InferenceSpec
    Gemma.Regression.FP16Spec
    Gemma.Regression.AttentionSpec
    Gemma.Regression.Q4Spec
    Gemma.Regression.Q4InferenceSpec
    Gemma.Regression.InferenceSpec
    Gemma.Regression.CompareWithOfficialSpec
    Gemma.Regression.FirstTokenSpec
  hs-source-dirs:   test
  default-language: Haskell2010
  ghc-options:      -Wall -threaded -rtsopts -with-rtsopts=-N

  build-depends:
    base >= 4.14 && < 5,
    gemma,
    hspec >= 2.7,
    QuickCheck >= 2.14,
    directory >= 1.3,
    process >= 1.6,
    time >= 1.9,
    aeson >= 2.0,
    vector >= 0.12,
    bytestring >= 0.10,
    text >= 1.2,
    webgpu-dawn,
    unordered-containers >= 0.2

executable gemma-cli
  main-is:          Main.hs
  hs-source-dirs:   app
  default-language: Haskell2010
  ghc-options:      -Wall -threaded -rtsopts -with-rtsopts=-N -O2

  build-depends:
    base >= 4.14 && < 5,
    gemma,
    vector >= 0.12,
    webgpu-dawn,
    text >= 1.2

executable show-configs
  main-is:          ShowConfigs.hs
  hs-source-dirs:   examples
  default-language: Haskell2010
  ghc-options:      -Wall -O2

  build-depends:
    base >= 4.14 && < 5,
    gemma

executable benchmark-linear-dsl
  main-is:          benchmark-linear-dsl.hs
  hs-source-dirs:   .
  default-language: Haskell2010
  ghc-options:      -Wall -threaded -rtsopts -with-rtsopts=-N -O2

  build-depends:
    base >= 4.14 && < 5,
    gemma,
    vector >= 0.12,
    webgpu-dawn,
    clock >= 0.8

executable test-tokenizer-proto
  main-is:          TestTokenizerProto.hs
  hs-source-dirs:   examples
  default-language: Haskell2010
  ghc-options:      -Wall -O2

  build-depends:
    base >= 4.14 && < 5,
    gemma,
    vector >= 0.12,
    text >= 1.2

executable test-tokenizer
  main-is:          TestTokenizer.hs
  hs-source-dirs:   examples
  default-language: Haskell2010
  ghc-options:      -Wall -O2

  build-depends:
    base >= 4.14 && < 5,
    gemma,
    text >= 1.2

executable test-chat-template
  main-is:          TestChatTemplate.hs
  hs-source-dirs:   examples
  default-language: Haskell2010
  ghc-options:      -Wall -O2

  build-depends:
    base >= 4.14 && < 5,
    gemma,
    text >= 1.2

executable compare-tokenizers
  main-is:          CompareTokenizers.hs
  hs-source-dirs:   examples
  default-language: Haskell2010
  ghc-options:      -Wall -O2

  build-depends:
    base >= 4.14 && < 5,
    gemma,
    text >= 1.2,
    process >= 1.6

executable test-kvcache-basic
  main-is:          TestKVCacheBasic.hs
  hs-source-dirs:   examples
  default-language: Haskell2010
  ghc-options:      -Wall -O2

  build-depends:
    base >= 4.14 && < 5,
    gemma,
    vector >= 0.12

executable benchmark-kvcache
  main-is:          BenchmarkKVCache.hs
  hs-source-dirs:   examples
  default-language: Haskell2010
  ghc-options:      -Wall -O2

  build-depends:
    base >= 4.14 && < 5,
    gemma,
    vector >= 0.12,
    text >= 1.2

executable test-qkv-projection
  main-is:          TestQKVProjection.hs
  hs-source-dirs:   examples
  default-language: Haskell2010
  ghc-options:      -Wall -O2

  build-depends:
    base >= 4.14 && < 5,
    gemma,
    vector >= 0.12,
    webgpu-dawn

executable test-simple-gpu
  main-is:          TestSimpleGPU.hs
  hs-source-dirs:   examples
  default-language: Haskell2010
  ghc-options:      -Wall -O2

  build-depends:
    base >= 4.14 && < 5,
    vector >= 0.12,
    webgpu-dawn

executable test-residual-add
  main-is:          TestResidualAdd.hs
  hs-source-dirs:   examples
  default-language: Haskell2010
  ghc-options:      -Wall -O2

  build-depends:
    base >= 4.14 && < 5,
    gemma,
    vector >= 0.12,
    webgpu-dawn

executable test-rope
  main-is:          TestRoPE.hs
  hs-source-dirs:   examples
  default-language: Haskell2010
  ghc-options:      -Wall -O2

  build-depends:
    base >= 4.14 && < 5,
    gemma,
    vector >= 0.12,
    webgpu-dawn

executable test-attention-scores
  main-is:          TestAttentionScores.hs
  hs-source-dirs:   examples
  default-language: Haskell2010
  ghc-options:      -Wall -O2

  build-depends:
    base >= 4.14 && < 5,
    gemma,
    vector >= 0.12,
    webgpu-dawn

executable test-attention-output
  main-is:          TestAttentionOutput.hs
  hs-source-dirs:   examples
  default-language: Haskell2010
  ghc-options:      -Wall -O2

  build-depends:
    base >= 4.14 && < 5,
    gemma,
    vector >= 0.12,
    webgpu-dawn

executable test-output-projection
  main-is:          TestOutputProjection.hs
  hs-source-dirs:   examples
  default-language: Haskell2010
  ghc-options:      -Wall -O2

  build-depends:
    base >= 4.14 && < 5,
    gemma,
    vector >= 0.12,
    webgpu-dawn

executable test-embedding
  main-is:          TestEmbedding.hs
  hs-source-dirs:   examples
  default-language: Haskell2010
  ghc-options:      -Wall -O2

  build-depends:
    base >= 4.14 && < 5,
    gemma,
    vector >= 0.12,
    webgpu-dawn

executable test-embedding-io
  main-is:          TestEmbeddingIO.hs
  hs-source-dirs:   examples
  default-language: Haskell2010
  ghc-options:      -Wall -O2

  build-depends:
    base >= 4.14 && < 5,
    gemma,
    vector >= 0.12,
    webgpu-dawn

executable test-embedding-large
  main-is:          TestEmbeddingLarge.hs
  hs-source-dirs:   examples
  default-language: Haskell2010
  ghc-options:      -Wall -O2

  build-depends:
    base >= 4.14 && < 5,
    gemma,
    vector >= 0.12,
    webgpu-dawn

executable test-embedding-sizes
  main-is:          TestEmbeddingSizes.hs
  hs-source-dirs:   examples
  default-language: Haskell2010
  ghc-options:      -Wall -O2

  build-depends:
    base >= 4.14 && < 5,
    gemma,
    vector >= 0.12,
    webgpu-dawn

executable test-layer0-rmsnorm
  main-is:          TestLayer0RMSNorm.hs
  hs-source-dirs:   examples
  default-language: Haskell2010
  ghc-options:      -Wall -O2

  build-depends:
    base >= 4.14 && < 5,
    gemma,
    vector >= 0.12,
    webgpu-dawn

executable test-batching
  main-is:          TestBatching.hs
  hs-source-dirs:   examples
  default-language: Haskell2010
  ghc-options:      -Wall -O2

  build-depends:
    base >= 4.14 && < 5,
    vector >= 0.12,
    webgpu-dawn

executable test-inference-simple
  main-is:          TestInferenceSimple.hs
  hs-source-dirs:   examples
  default-language: Haskell2010
  ghc-options:      -Wall -O2

  build-depends:
    base >= 4.14 && < 5,
    gemma,
    vector >= 0.12,
    transformers >= 0.5,
    text >= 1.2

executable test-debug-nan
  main-is:          TestDebugNaN.hs
  hs-source-dirs:   examples
  default-language: Haskell2010
  ghc-options:      -Wall -O2

  build-depends:
    base >= 4.14 && < 5,
    gemma,
    vector >= 0.12,
    transformers >= 0.5,
    webgpu-dawn

executable test-tdd
  main-is:          TestTDD.hs
  hs-source-dirs:   examples
  default-language: Haskell2010
  ghc-options:      -Wall -O2

  build-depends:
    base >= 4.14 && < 5,
    gemma,
    vector >= 0.12,
    transformers >= 0.5,
    webgpu-dawn

executable verify-weight-loading
  main-is:          VerifyWeightLoading.hs
  hs-source-dirs:   examples
  default-language: Haskell2010
  ghc-options:      -Wall -O2

  build-depends:
    base >= 4.14 && < 5,
    gemma,
    vector >= 0.12

executable test-chat-sequence
  main-is:          TestChatSequence.hs
  hs-source-dirs:   examples
  default-language: Haskell2010
  ghc-options:      -Wall -O2

  build-depends:
    base >= 4.14 && < 5,
    gemma,
    vector >= 0.12

executable test-simple-prompt
  main-is:          TestSimplePrompt.hs
  hs-source-dirs:   examples
  default-language: Haskell2010
  ghc-options:      -Wall -O2

  build-depends:
    base >= 4.14 && < 5,
    gemma,
    vector >= 0.12,
    text >= 1.2

executable test-fp16-shaders
  main-is:          TestFP16Shaders.hs
  hs-source-dirs:   examples
  default-language: Haskell2010
  ghc-options:      -Wall -O2

  build-depends:
    base >= 4.14 && < 5,
    gemma,
    vector >= 0.12,
    webgpu-dawn

executable benchmark-fp16
  main-is:          BenchmarkFP16.hs
  hs-source-dirs:   examples
  default-language: Haskell2010
  ghc-options:      -Wall -threaded -rtsopts -with-rtsopts=-N -O2

  build-depends:
    base >= 4.14 && < 5,
    gemma,
    vector >= 0.12,
    webgpu-dawn,
    transformers >= 0.5,
    text >= 1.2

executable test-vec4-linear
  main-is:          TestVec4Linear.hs
  hs-source-dirs:   examples
  default-language: Haskell2010
  ghc-options:      -Wall -O2

  build-depends:
    base >= 4.14 && < 5,
    gemma,
    vector >= 0.12,
    webgpu-dawn

executable benchmark-vec4
  main-is:          BenchmarkVec4.hs
  hs-source-dirs:   examples
  default-language: Haskell2010
  ghc-options:      -Wall -threaded -rtsopts -with-rtsopts=-N -O2

  build-depends:
    base >= 4.14 && < 5,
    gemma,
    vector >= 0.12,
    webgpu-dawn,
    transformers >= 0.5,
    text >= 1.2

executable test-vec4-inference
  main-is:          TestVec4Inference.hs
  hs-source-dirs:   examples
  default-language: Haskell2010
  ghc-options:      -Wall -threaded -rtsopts -with-rtsopts=-N -O2

  build-depends:
    base >= 4.14 && < 5,
    gemma,
    vector >= 0.12,
    text >= 1.2

executable test-ffn-fusion
  main-is:          TestFFNFusion.hs
  hs-source-dirs:   examples
  default-language: Haskell2010
  ghc-options:      -Wall -threaded -rtsopts -with-rtsopts=-N -O2

  build-depends:
    base >= 4.14 && < 5,
    gemma,
    vector >= 0.12,
    webgpu-dawn

executable benchmark-phase3
  main-is:          BenchmarkPhase3.hs
  hs-source-dirs:   examples
  default-language: Haskell2010
  ghc-options:      -Wall -threaded -rtsopts -with-rtsopts=-N -O2

  build-depends:
    base >= 4.14 && < 5,
    gemma,
    vector >= 0.12,
    webgpu-dawn,
    text >= 1.2

executable test-attention-post-fusion
  main-is:          TestAttentionPostFusion.hs
  hs-source-dirs:   examples
  default-language: Haskell2010
  ghc-options:      -Wall -threaded -rtsopts -with-rtsopts=-N -O2

  build-depends:
    base >= 4.14 && < 5,
    gemma,
    vector >= 0.12,
    webgpu-dawn

executable test-u32-basic
  main-is:          test-u32-basic.hs
  hs-source-dirs:   .
  default-language: Haskell2010
  ghc-options:      -Wall -O2

  build-depends:
    base >= 4.14 && < 5,
    vector >= 0.12,
    webgpu-dawn

executable test-u4-basic
  main-is:          test-u4-basic.hs
  hs-source-dirs:   .
  default-language: Haskell2010
  ghc-options:      -Wall -O2

  build-depends:
    base >= 4.14 && < 5,
    vector >= 0.12,
    webgpu-dawn

executable test-all-dtypes
  main-is:          test-all-dtypes.hs
  hs-source-dirs:   .
  default-language: Haskell2010
  ghc-options:      -Wall -O2

  build-depends:
    base >= 4.14 && < 5,
    vector >= 0.12,
    webgpu-dawn

executable test-u32-copy
  main-is:          test-u32-copy.hs
  hs-source-dirs:   .
  default-language: Haskell2010
  ghc-options:      -Wall -O2

  build-depends:
    base >= 4.14 && < 5,
    vector >= 0.12,
    webgpu-dawn

executable test-u32-copy-rw
  main-is:          test-u32-copy-rw.hs
  hs-source-dirs:   .
  default-language: Haskell2010
  ghc-options:      -Wall -O2

  build-depends:
    base >= 4.14 && < 5,
    vector >= 0.12,
    webgpu-dawn

executable test-q4-minimal
  main-is:          test-q4-minimal.hs
  hs-source-dirs:   .
  default-language: Haskell2010
  ghc-options:      -Wall -O2

  build-depends:
    base >= 4.14 && < 5,
    vector >= 0.12,
    webgpu-dawn

executable test-q4-3buffer
  main-is:          test-q4-3buffer.hs
  hs-source-dirs:   .
  default-language: Haskell2010
  ghc-options:      -Wall -O2

  build-depends:
    base >= 4.14 && < 5,
    vector >= 0.12,
    webgpu-dawn

executable test-3buffer-f32
  main-is:          test-3buffer-f32.hs
  hs-source-dirs:   .
  default-language: Haskell2010
  ghc-options:      -Wall -O2

  build-depends:
    base >= 4.14 && < 5,
    vector >= 0.12,
    webgpu-dawn

executable test-q4-loading
  main-is:          test-q4-loading.hs
  hs-source-dirs:   .
  default-language: Haskell2010
  ghc-options:      -Wall -O2

  build-depends:
    base >= 4.14 && < 5,
    gemma,
    vector >= 0.12

executable test-q4-dequant
  main-is:          test-q4-dequant.hs
  hs-source-dirs:   .
  default-language: Haskell2010
  ghc-options:      -Wall -O2

  build-depends:
    base >= 4.14 && < 5,
    gemma,
    vector >= 0.12

executable benchmark-q4
  main-is:          benchmark-q4-simple.hs
  hs-source-dirs:   .
  default-language: Haskell2010
  ghc-options:      -Wall -O2 -threaded

  build-depends:
    base >= 4.14 && < 5,
    gemma,
    vector >= 0.12,
    time >= 1.9,
    directory >= 1.3

executable test-buffer-reduction
  main-is:          test-buffer-reduction.hs
  hs-source-dirs:   .
  default-language: Haskell2010
  ghc-options:      -Wall -O2

  build-depends:
    base >= 4.14 && < 5,
    gemma,
    vector >= 0.12

executable test-embedding-minimal
  main-is:          test-embedding-minimal.hs
  hs-source-dirs:   .
  default-language: Haskell2010
  ghc-options:      -Wall -O2

  build-depends:
    base >= 4.14 && < 5,
    transformers >= 0.5,
    vector >= 0.12,
    webgpu-dawn

executable test-fp16-comparison
  main-is:          test-fp16-comparison.hs
  hs-source-dirs:   .
  default-language: Haskell2010
  ghc-options:      -Wall -O2

  build-depends:
    base >= 4.14 && < 5,
    vector >= 0.12,
    webgpu-dawn,
    transformers >= 0.5

executable test-embedding-cpu-gpu
  main-is:          test-embedding-cpu-gpu.hs
  hs-source-dirs:   .
  default-language: Haskell2010
  ghc-options:      -Wall -O2

  build-depends:
    base >= 4.14 && < 5,
    vector >= 0.12,
    webgpu-dawn,
    transformers >= 0.5

executable test-q4-debug
  main-is:          test-q4-debug.hs
  hs-source-dirs:   .
  default-language: Haskell2010
  ghc-options:      -Wall -O0

  build-depends:
    base >= 4.14 && < 5,
    gemma,
    vector >= 0.12,
    aeson >= 2.0,
    bytestring >= 0.10

executable test-q4-dequant-debug
  main-is:          test-q4-dequant-debug.hs
  hs-source-dirs:   .
  default-language: Haskell2010
  ghc-options:      -Wall -O0

  build-depends:
    base >= 4.14 && < 5,
    gemma,
    vector >= 0.12,
    text >= 1.2,
    bytestring >= 0.10

executable test-rmsnorm-q4-debug
  main-is:          test-rmsnorm-q4-debug.hs
  hs-source-dirs:   .
  default-language: Haskell2010
  ghc-options:      -Wall -O0

  build-depends:
    base >= 4.14 && < 5,
    gemma,
    vector >= 0.12,
    text >= 1.2,
    bytestring >= 0.10

executable test-q4-gpu-rmsnorm
  main-is:          test-q4-gpu-rmsnorm.hs
  hs-source-dirs:   .
  default-language: Haskell2010
  ghc-options:      -Wall -O0

  build-depends:
    base >= 4.14 && < 5,
    gemma,
    vector >= 0.12,
    text >= 1.2,
    bytestring >= 0.10,
    webgpu-dawn

executable test-q4-gpu-upload
  main-is:          test-q4-gpu-upload.hs
  hs-source-dirs:   .
  default-language: Haskell2010
  ghc-options:      -Wall -O0

  build-depends:
    base >= 4.14 && < 5,
    gemma,
    vector >= 0.12,
    text >= 1.2,
    webgpu-dawn

executable quantize-to-q4
  main-is:          QuantizeToQ4.hs
  hs-source-dirs:   app
  default-language: Haskell2010
  ghc-options:      -Wall -O2 -threaded

  build-depends:
    base >= 4.14 && < 5,
    gemma,
    vector >= 0.12,
    text >= 1.2,
    bytestring >= 0.10,
    webgpu-dawn
